# lms-e-campus-playwright

./: .gitignore  README.md  conftest.py  hide_init.py  prd.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
.claude/skills/: skill-component.md  skill-debug.md  skill-fixture.md  skill-github.md  skill-locator.md  skill-pom.md  skill-setup.md  skill-test-case.md  skill-test-data.md  skill-test-report.md  skill-test.md
.playwright-mcp/: dashboard_debug.md  get_email_tabs.md  profile_menu_open.md  sign_out_menu.md
.qwen/: settings.json  settings.json.orig
config/: config.py
data/: add_student_data.py  admission_data.py  course_data.py  kaprodi_data.py  lecturer_data.py  login_data.py  student_data.py  thesis_data.py
data/authentication/: invalid_login.json  valid_login.json
data/thesis/: valid_approval.json  valid_proposal.json
docs/test_cases/: authentication.md  e2e.md  test_cases.csv  thesis.md
pages/: admission_page.py  base_page.py  login_page.py  navbar_page.py
pages/admin_office/: sidebar.py
pages/get_email/: get_email_page.py
pages/kaprodi/: __init__.py  defense_documents_page.py  sidebar.py  thesis_approval_page.py
pages/lecturer/: __init__.py  sidebar.py  thesis_progress_page.py
pages/mahasiswa/: __init__.py  sidebar.py
pages/student/: __init__.py  (+2 more)
test/: test_add_course.py  test_add_kaprodi.py  test_add_lecturer.py  test_add_student.py  test_admission.py  test_delete_student.py  test_edit_student.py  test_login.py  test_navbar.py  test_view_student.py
tests/: conftest.py
utils/: faker_helper.py  file_helper.py
(+77 files in other folders)
